# rust_math_pet

./: .gitignore  Cargo.toml  README.md
src/: game_state.rs  main.rs  pet.rs  question_generator.rs  shop.rs  text_ui.rs  text_util.rs  time_utils.rs  ui.rs
src/question_generator/: math_question_generator.rs  question_generator.rs
src/ui/: egui.rs  text.rs
src/ui/egui/: egui_ui.rs
src/ui/text/: text_ui.rs
